# karakuri-arcade

./: .clang-tidy  .editorconfig  CMakeLists.txt  LICENSE  README.md
src/: main.c
